--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".options"></activity>
+        <activity android:name=".options" />
+        <activity android:name=".comment_rating"></activity>
     </application>
 
 </manifest>
