--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,13 +55,14 @@
             android:authorities="com.facebook.app.FacebookContentProvider618114188363722"
             android:exported="true" />
 
-        <activity android:name=".Map"></activity>
-        <meta-data
-            android:name="com.google.android.gms.version"/>
+        <activity android:name=".Map" />
+
+        <meta-data android:name="com.google.android.gms.version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
+        <activity android:name=".pictures"></activity>
     </application>
 
 </manifest>
