Added in Map Options

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".pictures"></activity>
+        <activity android:name=".pictures" />
+        <activity android:name=".friendsList"></activity>
     </application>
 
 </manifest>
