--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/jsoup-1.10.1.jar')
 }
 apply plugin: 'com.google.gms.google-services'
